--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,6 @@ $yellow:#FEC171;
 $panGreen: #30B08F;
 
 //sidebar
-$menuBg:#304156;
-$subMenuBg:#1f2d3d;
-$menuHover:#001528;
+$menuBg:#32323a;
+$subMenuBg:#29282e;
+$menuHover:#212025;
