--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -58,7 +58,7 @@
       &:hover {
         span {
           display: block;
-          border-radius: 3px;
+          // border-radius: 3px;
           z-index: 1002;
           width: 140px;
           height: 50px;
